--- a/styles/vanilla/less/app.less
+++ b/styles/vanilla/less/app.less
@@ -248,8 +248,9 @@
         float: left;
         width: 60%;
         }
-    .tabs ul {        background-color: transparent;
-}
+    .tabs ul {
+        background-color: transparent;
+        }
     .tabs > div > :last-child:after {
         clear: both;
         display: block;
@@ -322,11 +323,13 @@
 
 /*  Boxes */
 
-    .examples {
-        width: 100% !important;
+    .content .examples {
+        clear: both;
+        width: 100%;
         }
     .examples ul {
         margin: 0;
+         width: 100% ;
         .display-box();
         }
     .examples li {
